# Tetris-Prueba-1

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Juego/: CMakeLists.txt  Nlsl.txt
Juego/.github/Workflows/: build.yml
Juego/src/: main.cpp
src/: main.cpp
